
  - Add support for CCVERSION and CXXVERSION variables for a number
    of C and C++ compilers.

  From Ralf W. Grosse-Kunstleve:

  - Accomodate anydbm modules that don't have a sync() method.

  From Stephen Kennedy:

  - Add support for a configurable global .sconsign.dbm file which
    can be used to avoid cluttering each directory with an individual
    .sconsign file.

  From Steven Knight:

  - The -Q option suppressed too many messages; fix it so that it only
    suppresses the Reading/Building messages.

  - Support #include when there's no space before the opening quote
    or angle bracket.

  - Accomodate alphanumeric version strings in EnsurePythonVersion().

  - Support arbitrary expansion of construction variables within
    file and directory arguments to Builder calls and Environment methods.

  - Add Environment-method versions of the following global functions:
    AddPreAction(), AddPostAction(), BuildDir(), CacheDir(), Clean(),
    Default(), EnsurePythonVersion(), EnsureSConsVersion(), Exit(),
    Export(), FindFile(), GetBuildPath(), GetOption(), Help(),
    Import(), Local(), Repository(), SConsignFile(), SetOption(),
    SourceSignatures(), TargetSignatures().

  - Add the following global functions that correspond to the same-named
    Environment methods:  AlwaysBuild(), Command(), Depends(), Ignore(),
    Install(), InstallAs(), Precious(), SideEffect() and SourceCode().

  - Rearrange the man page to show construction environment methods and
    global functions in the same list, and to explain the difference.

  - Rename the Environment.Environment class to Enviroment.Base.
    Allow the wrapping interface to extend an Environment by using its own
    subclass of Environment.Base and setting a new Environment.Environment
    variable as the calling entry point.

  From Bram Moolenaar:

  - Split the non-SCons-specific functionality from SConf.py to a new,
    re-usable Conftest.py module.


